@@ -88,6 +88,8 @@ To use the old style, put @code{(define-special-variable customize-program "sawf
 @item Make Viewport commands appear in Sawfish-UI [Christopher Bratusek]
 
 @item Make Window History appear in Sawfish-UI [Christopher Bratusek]
+
+@item Added cycle-among-groups{,-backwards} commands (cycle between the most recently used window of groups) [Fernando Carmano Varo]
 @end itemize
 
 @item Other changes:
