@@ -1,6 +1,9 @@
 2009-05-07  Christopher Bratusek <zanghar@freenet.de>
 	* COPYING.SOUNDS: added
 
+	* lisp/sawfish/wm/autoload.jl
+	* lisp/sawfish/wm/commands/x-cycle.jl: added cycle-among-groups{,-backwards} [Fernando Carmano Varo]
+
 2009-05-06  Christopher Bratusek <zanghar@freenet.de>
 	* sawfish.spec.in: don't re-define %{_host} [Ritz]
 
